--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,21 @@
+:root {
+  --color-white: #ffffff;
+  --color-navy-blue: #2e2f42;
+  --color-slate: #434455;
+  --color-light-slate: #8e8f99;
+  --color-iris: #4d5ae5;
+  --color-ocean: #404bbf;
+  --color-cloud: #f4f4fd;
+  --color-cornflower: #e7e9fc;
+  --color-green: #31d0aa;
+  --color-dairy: #fcfcfc;
+  --color-overlay: #2e2f4266;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
-  color: #434455;
-  background-color: #ffffff;
+  background-color: var(--color-white);
+  color: var(--color-slate);
 }
 
 a {
@@ -67,7 +81,7 @@ header {
   padding: 0;
 }
 .logo {
-  color: #4d5ae5;
+  color: var(--color-iris);
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -488,6 +502,222 @@ footer {
 }
 .frame-icon {
   fill: #f4f4fd;
+}
+
+/* modal */
+.modal-overlay {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  background-color: var(--color-overlay);
+  position: fixed;
+  cursor: default;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--color-dairy);
+  width: 408px;
+  min-height: 584px;
+  border-radius: 4px;
+  padding: 24px;
+  padding-top: 72px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.is-open {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  color: var(--color-navy-blue);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+.modal-close-btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  background-color: var(--color-cornflower);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.modal-close-icon {
+  width: 8px;
+  height: 8px;
+  fill: var(--color-navy-blue);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn[type='button']:hover,
+.modal-close-btn[type='button']:focus {
+  background-color: var(--color-ocean);
+  border: none;
+}
+.modal-close-btn[type='button']:hover .modal-close-icon,
+.modal-close-btn[type='button']:focus .modal-close-icon {
+  fill: var(--color-white);
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.field-block {
+  margin-bottom: 8px;
+}
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+  color: var(--color-light-slate);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  position: relative;
+}
+.modal-label a {
+  color: var(--color-iris);
+  text-decoration: underline;
+}
+.modal-label a:hover,
+.modal-label a:focus,
+.modal-label a:active {
+  text-decoration: none;
+}
+.field-subblock {
+  position: relative;
+}
+.modal-field {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-field:focus,
+.modal-field:active {
+  border: 1px solid var(--color-iris);
+}
+.modal-icon {
+  position: absolute;
+  width: 18px;
+  height: 24px;
+  left: 16px;
+  fill: var(--color-navy-blue);
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-field:focus + .modal-icon {
+  fill: var(--color-iris);
+}
+.textarea-block {
+  margin-bottom: 16px;
+}
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-textarea:focus {
+  border-color: #4d5ae5;
+}
+.checkbox-block {
+  margin-bottom: 24px;
+}
+.user-privacy-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--color-light-slate);
+}
+.user-privacy-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.user-privacy-icon {
+  fill: var(--color-cloud);
+}
+input[type='checkbox']:checked + label span {
+  background-color: var(--color-ocean);
+  border: none;
+  fill: var(--color-cloud);
+}
+.user-privacy-link {
+  color: var(--color-iris);
+  text-decoration: underline;
+}
+.modal-button {
+  padding: 16px 32px;
+  background-color: var(--color-iris);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  color: var(--color-white);
+  border-radius: 4px;
+  border: 1px solid transparent;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  margin: 0 auto;
+  margin-top: 24px;
+  min-width: 169px;
+  height: 56px;
+  cursor: pointer;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button:hover,
+.modal-button:focus {
+  background-color: var(--color-ocean);
 }
 
 /* Visually-hidden */
