--- a/css/styles.css
+++ b/css/styles.css
@@ -659,13 +659,13 @@ footer {
   fill: var(--color-navy-blue);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn[type='button']:hover,
-.modal-close-btn[type='button']:focus {
+.modal-close-btn:hover,
+.modal-close-btn:focus {
   background-color: var(--color-ocean);
   border: none;
+  fill: var(--color-white);
 }
-.modal-close-btn[type='button']:hover .modal-close-icon,
-.modal-close-btn[type='button']:focus .modal-close-icon {
+.modal-close-btn:hover .modal-close-icon .modal-close-btn:focus .modal-close-icon {
   fill: var(--color-white);
 }
 .modal-form {
